--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@primeng/themes": "^18.0.2",
+    "json-server": "^1.0.0-beta.3",
+    "primeicons": "^7.0.0",
     "primeng": "^18.0.0",
     "primevue": "^4.3.2",
     "rxjs": "~7.8.0",
